{{$NEXT}}

3.4.0  2024-04-09T14:57:37-05:00
    - Ensure the returned comment has all text from the comment
        character to the end of that line
    - Add new test and modify existing tests as required
    - Add alias named arg to sub strip-comment:
      + :mark(:$comment-char) <= new alias '$comment-char'
    - Tweak docs

3.3.3  2024-03-31T14:15:26-05:00
    - Upgrade Github workflows actions to @v4
    - Add missing .yml suffix to workflow files in dist.ini

3.3.2  2024-03-31T07:22:30-05:00
    - Change Github workflows to three-OS tests
    - Use KMP-Matcher from module module AlgorithmsIT in sub 'count-substrings'
    - Rearrange order of sub descriptions in the README
    - Add sub sort-list (from module Abbreviations)
      + add tests
    - Improve sub 'wrap-text' to use FontFactory
    - Use better returns at sub end (eliminate explicit 'return')
    - Use latest Font::AFM (ver 1.24.10)
    - Improve documentation
    - Add test for normalizing newlines and tabs in strings
    - Removed deprecated code (sub write-paragraph)

3.3.1  2023-01-04T11:25:21-06:00
    - Make 'normalize-string' and 'normalize-text' separate routines

3.3.0  2022-10-27T07:37:56-05:00
    - Correctly handle real numbers to preserve two decimal places
      since 'commify' as a default
    - Add option to specify number of decimal places to be shown

3.2.0  2022-09-17T18:27:09-05:00
    - Correct workflow/test.yml
    - Eliminate non-Linux testing for now
    - Correct Github support paths in META6.json file
    - Remove 'ask' which is now in its own module
    - Remove dependencies in 'test-depends' since it's now in workflows/test.yml

3.1.0  2022-08-22T18:02:43-05:00
    - Export 'ask' as an alias for routine 'prompt

3.0.6  2022-06-04T16:48:15-05:00
    - Update dependency on Font::AFM updated version
    - REALLY remove dependency on Test::META

3.0.5  2022-06-04T10:16:53-05:00
    - Remove dependency on Test::META

3.0.4  2022-01-12T21:19:25-06:00