@@ -55,6 +55,8 @@ off. Note the designated character will trigger the strip even though
 it is escaped or included in quotes.  Also returns the comment,
 including the comment character, if
 requested.  All returned text is normalized if requested.
+Any returned comment will also be normalized if the C<normalize-all>
+option is used in place of C<normalize>.
 
 The signature:
 
@@ -64,12 +66,19 @@ sub strip-comment(
     :mark(:$comment-char) = '#',  # desired comment character indicator
                                   #   (with alias :$comment-char)
     :$save-comment,               # if true, return the comment
-    :$normalize,                  # if true, normalize returned strings
+    :$normalize,                  # if true, normalize returned string
+    :$normalize-all,              # if true, normalize returned string
+                                  #   and also normalize any saved comment
     :$last,                       # if true, use the last instead of first 
-                                  #   comment char
+                                  #   comment character
     ) is export(:strip-comment)
 {...}
 =end code
+
+Note the default return is the returned string without any comment.
+However, if you use the C<save-comment> option, a two-element list
+is returned: C<($string, $comment)> (either element may be "" depending
+upon the input text line).
 
 =head3 sub normalize-string (or its alias 'normalize-text')
 
